<resources>
    <string name="app_name">QMobilityClient</string>
    <string name="qmobility">QMobility</string>
    <string name="smart_queue_system">smart_queue_system</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">UserName</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
</resources>