<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".RegisterClientActivity">

    <TextView
        android:id="@+id/registerClientHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/qmobility"
        android:textColor="#FF6E40"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerClientSmallHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smart_queue_system"
        android:textColor="#FF6E40"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/registerClientHeaderTextView"
        app:layout_constraintStart_toStartOf="@+id/registerClientHeaderTextView"
        app:layout_constraintTop_toBottomOf="@+id/registerClientHeaderTextView" />

    <TextView
        android:id="@+id/registerClientLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:minHeight="48sp"
        android:onClick="registerClientLoginTextViewClicked"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerClientSmallHeaderTextView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="280dp"
        android:layout_height="504dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_right_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerClientSmallHeaderTextView">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/registerClientSignUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:minHeight="48dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/registerClientLoginTextView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clientRegisterPanel"
        android:layout_width="400dp"
        android:layout_height="360dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/shape_login_panel"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerClientSmallHeaderTextView">

        <EditText
            android:id="@+id/registerClientUserNameEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/registerClientEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerClientUserNameEditText" />

        <EditText
            android:id="@+id/registerClientPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerClientEmailEditText" />

        <EditText
            android:id="@+id/registerClientPhoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@color/white"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerClientPasswordEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_corners"
        android:onClick="registerButtonClicked"
        android:text="@string/register"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/clientRegisterPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>